# nvidia

./: .gitignore  README.md
colab/: cudaToolkitInstall12.4.ipynb
cuda_programming_guide_13_1/: 2-Programming-GPUs-in-CUDA.md  2.1.10-thread-cluster.cu  2.1.3-memory-vecAdd.cu  2.3.3.4-cuda-events.cu  3-Advanced-CUDA.md  FILES-SECTION-3.md  FILES.md  GUIDE.md  README.md  cuda-tips-README.md  query-device-property  query-device-property-README.md  query-device-property.cu  test-query-device-property.sh
cuda_programming_guide_13_1/analysis/: amd-gpu-specs.yaml  amd-nvidia-terminology.md  gb10-gb200.md  gb10-rtx5070.md  gb10-t4.md  gpu-specs.yaml  pdl-investigation.md
cuda_programming_guide_13_1/reports/: 2.3.3.4-cuda-events.nsys-rep  3.1.4-pdl-ncu.ncu-rep  3.1.4-pdl-sampling.nsys-rep  3.1.4-pdl-sampling.sqlite  3.1.4-pdl.nsys-rep  3.1.4-pdl.sqlite
cuda_programming_guide_13_1/src/: 2.1.10-thread-cluster.cu  2.1.3-memory-vecAdd.cu  2.2.3.8-dist-memory.cu  3.1.4-pdl.cu  (+5 more)
dgx-spark-clustering/: README.md  requirements.txt  requirements_full.txt
libcudf_tutorial/: CMakeLists.txt  Makefile  README.md  libcudf_tpch_orders_groupby.cu  make_tpch_orders.py  rmm_backtrace_resource_adaptor.hpp
libcudf_tutorial/docs/: backtrace_symbol_resolution.md  rmm_groupby_allocation_analysis.md
libcudf_tutorial/reports/: libcudf_groupby.nsys-rep  libcudf_groupby.sqlite  libcudf_groupby_100M.nsys-rep  libcudf_groupby_100M_2.nsys-rep  libcudf_groupby_1B.nsys-rep  libcudf_groupby_1M.nsys-rep  libcudf_groupby_orders_100M.nsys-rep
python/: Makefile  requirements.txt  requirements_full.txt
(+3 files in other folders)
